force-app/main/default/objects/DC_Rack__c/DC_Rack__c.object-meta.xml
<CustomObject>
    <label>Rack</label>
    <nameField>
        <label>Rack Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Racks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>