force-app/main/default/objects/DC_Rack__c/fields/Available_RU_Space__c.field-meta.xml
<CustomField>
    <fullName>Available_RU_Space__c</fullName>
    <formula>Number_of_Rack_Units__c -  Occupied_RU_Space__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available RU Space</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>