force-app/main/default/objects/DC_Rack__c/fields/Committed_Power__c.field-meta.xml
<CustomField>
    <fullName>Committed_Power__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp;  Asset__r.Id,   Asset__r.Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Committed Power</label>
    <type>Text</type>
</CustomField>