force-app/main/default/objects/DC_Rack__c/fields/Connected_Power__c.field-meta.xml
<CustomField>
    <fullName>Connected_Power__c</fullName>
    <label>Connected Power</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>