force-app/main/default/objects/DC_Rack__c/fields/Legacy_Cabinet_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Cabinet_Name__c</fullName>
    <label>Legacy Cabinet Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>