force-app/main/default/objects/DC_Rack__c/fields/Legacy_Cabinet_Name_from_Operations_Fil__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Cabinet_Name_from_Operations_Fil__c</fullName>
    <label>Legacy Cabinet Name (from Operations Fil</label>
    <length>30</length>
    <type>Text</type>
</CustomField>