force-app/main/default/objects/DC_Rack__c/fields/Meet_Me_Room__c.field-meta.xml
<CustomField>
    <fullName>Meet_Me_Room__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Meet Me Room</label>
    <referenceTo>DC_Meet_Me_Room__c</referenceTo>
    <relationshipLabel>Racks</relationshipLabel>
    <relationshipName>Racks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>