force-app/main/default/objects/DC_Rack__c/fields/MRI_Suite_ID__c.field-meta.xml
<CustomField>
    <fullName>MRI_Suite_ID__c</fullName>
    <label>MRI Suite ID</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>