force-app/main/default/objects/DC_Rack__c/fields/Number_of_Rack_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rack_Units__c</fullName>
    <description>Height of this rack in Rack Units</description>
    <label>Number of Rack Units</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>