force-app/main/default/objects/DC_Rack__c/fields/Occupied_RU_Space__c.field-meta.xml
<CustomField>
    <fullName>Occupied_RU_Space__c</fullName>
    <label>Occupied RU Space</label>
    <summarizedField>DC_Panel__c.Height_RU__c</summarizedField>
    <summaryForeignKey>DC_Panel__c.Rack__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>