force-app/main/default/objects/DC_Rack__c/fields/Rack_Row__c.field-meta.xml
<CustomField>
    <fullName>Rack_Row__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rack Row</label>
    <referenceTo>DC_Rack_Row__c</referenceTo>
    <relationshipLabel>Racks</relationshipLabel>
    <relationshipName>Racks</relationshipName>
    <type>Lookup</type>
</CustomField>