force-app/main/default/objects/DC_Rack__c/fields/Rack_Type__c.field-meta.xml
<CustomField>
    <fullName>Rack_Type__c</fullName>
    <label>Rack Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Netrality Owned</fullName>
            </value>
            <value>
                <fullName>Legacy Customer Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>