force-app/main/default/objects/DC_Rack__c/fields/Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Row_Number__c</fullName>
    <description>The Row in the Meet Me Room that this Rack Occupies, for grouping Racks together</description>
    <label>Row Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>