force-app/main/default/objects/DC_Rack__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <description>Two character short name of the Rack used to support naming convention.</description>
    <label>Short Name</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>