force-app/main/default/objects/DC_Rack__c/fields/Total_Occupied_Panels__c.field-meta.xml
<CustomField>
    <fullName>Total_Occupied_Panels__c</fullName>
    <description>Roll Up - Sum of Child Panel Height with Occupied status</description>
    <label>Total Occupied Panels</label>
    <summarizedField>DC_Panel__c.Height_RU__c</summarizedField>
    <summaryFilterItems>
        <field>DC_Panel__c.Status__c</field>
        <operation>equals</operation>
        <value>Occupied</value>
    </summaryFilterItems>
    <summaryForeignKey>DC_Panel__c.Rack__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>