force-app/main/default/objects/DC_Rack__c/fields/Total_Vacant_Panels__c.field-meta.xml
<CustomField>
    <fullName>Total_Vacant_Panels__c</fullName>
    <description>Number of Rack Units - Total Occupied Panels</description>
    <label>Total Vacant Panels</label>
    <summaryForeignKey>DC_Panel__c.Rack__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>